# pyTracker

./: .gitignore  README.md  setup.cfg  setup.py
tests/: test1_KF_vs_LS.ipynb  test2_KF_pattern_recognition_dev.ipynb  test3_real_event.ipynb  test4_VertexFinder.ipynb  test5_LS_with_scattering.ipynb  test6_parameter_tuning.ipynb
tracker/: DataTypes.py  KalmanFilter.py  KalmanUtils.py  TrackFinder.py  __init__.py  config_default.py  datatypes.py  globals.py  kalmanfilter.py  kf_debug.py  run.py  trackfinder.py  utilities.py  vertexfinder.py
tracker/io_user/: io_MuSim.py
