[metadata]
name = pyTracker
version = 1.0
author = Tom Ren, ...
author_email = runzeren2023@u.northwestern.edu
description = Python tools for track/vertex reconstruction
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
  numpy
  scipy
  iminuit



# Make the main program executable from shell
# You can directly run `pytracker ...` instead of `python run.py...`
[options.entry_points]
console_scripts =
    pytracker = tracker.run:main
